--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@
   padding-top: 94px;
   padding-bottom: 94px;
 }
+/* Загальні */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -44,14 +45,27 @@ a {
 ul {
   list-style: none;
 }
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.section {
+  padding: 94px 0;
+}
+
 /* Header */
 .header {
   padding: 24px 0;
   border-bottom: 1px solid #ECECEC;
 }
 
-.header-div-container {
-  display: flex;
+.header-div {
+  display: flex;                 /* FLEX */
   justify-content: space-between;
   align-items: center;
 }
@@ -62,13 +76,12 @@ ul {
   font-size: 26px;
   color: var(--black-color);
 }
-
 .logo span {
   color: var(--accent-color);
 }
 
 .nav-list {
-  display: flex;
+  display: flex;                 /* FLEX */
   gap: 40px;
 }
 
@@ -77,14 +90,13 @@ ul {
   font-weight: 500;
   transition: color 0.3s;
 }
-
 .nav-link.current,
 .nav-link:hover {
   color: var(--accent-color);
 }
 
 .contacts {
-  display: flex;
+  display: flex;                 /* FLEX */
   gap: 40px;
   font-size: 14px;
   color: var(--secondary-text-color);
@@ -96,12 +108,18 @@ ul {
   color: #fff;
   padding: 120px 0;
   text-align: center;
+  display: flex;                 /* FLEX */
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
+
 .hero-title {
   font-size: 44px;
   font-weight: 900;
   margin-bottom: 30px;
 }
+
 .hero-button {
   background-color: #2196F3;
   color: #fff;
@@ -113,12 +131,13 @@ ul {
   cursor: pointer;
 }
 
-.section {
-  padding: 94px 0;
-}
+/* Features */
 .features-list {
-  display: flex;
+  display: flex;                 /* FLEX */
   gap: 30px;
+}
+.features-list-li {
+  flex: 1;                       /* рівний розподіл */
 }
 .feature-title {
   font-weight: 700;
@@ -137,14 +156,20 @@ ul {
   color: #fff;
   padding: 60px 0;
 }
-.footer-contacts li {
-  margin-bottom: 9px;
+.foot {
+  display: flex;                 /* FLEX */
+  flex-direction: column;
+  gap: 20px;
+}
+.footer-contacts {
+  display: flex;                 /* FLEX */
+  flex-direction: column;
+  gap: 9px;
 }
 .footer-contacts a {
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
 }
-
 
 
 
