--- a/styles.css
+++ b/styles.css
@@ -141,25 +141,29 @@ ul {
 }
 
 /* Hero */
+/* Hero */
 .hero {
-  background-color: #2F303A;
-  color: #fff;
-  padding: 120px 0;
+  position: relative;
+  background-image: 
+    linear-gradient(rgba(47, 48, 58, 0.6), rgba(47, 48, 58, 0.6)), 
+    url("images/hero-bg.jpg"); /* заміни на свою картинку */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   text-align: center;
-  display: flex;             
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  padding: 200px 0;
+  color: #fff;
 }
 
 .hero-title {
   font-size: 44px;
   font-weight: 900;
   margin-bottom: 30px;
+  text-transform: uppercase;
 }
 
 .hero-button {
-  background-color: #2196F3;
+  background-color: var(--accent-color);
   color: #fff;
   font-size: 16px;
   font-weight: 700;
@@ -167,6 +171,11 @@ ul {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.hero-button:hover {
+  background-color: var(--hover-color);
 }
 
 
@@ -242,6 +251,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
