--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,19 @@ ul {
   list-style: none;
 }
 
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
+.icon-envelope-hover {
+  width: 1.3330078125em;
+}
+
+
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -251,6 +264,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
