--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,11 @@ ul {
   list-style: none;
 }
 
+.start{
+  width:16px;
+  height:12px;
+}
+
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -251,6 +256,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
