--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ ul {
     width: 370px;
     bottom: 0px;
     position: absolute;
-    background-color: #2F303A;
+    background-color: white;
     opacity: 80%;
     display: flex;
     justify-content: center;
@@ -306,6 +306,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
