--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,57 @@ ul {
     color: var(--white-text-color-background-color);
 }
 
+
+
+.OurTeam {
+    background-color: var(--OurTeam-section-bacground-color);
+    min-height: 708px;
+    padding: 95px 0;
+}
+
+.OurTeam-section-container {
+    min-height: 428px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.OurTeam-section-h2 {
+    font-size: 36px;
+    margin-bottom: 50px;
+}
+
+.OurTeam-section-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.OurTeam-section-list-items {
+    width: 270px;
+    height: 368px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--white-text-color-background-color);
+    border-radius: 5px;
+    box-shadow: 0px 2px 30px -19px rgba(0,0,0,0.76);
+}
+
+.OurTeam-section-img-items {
+    width: 270px;
+    height: 260px;
+}
+
+.OurTeam-social-network {
+    fill: #AFB1B8 !important;
+}
+
+.OurTeam-social-network:hover {
+    fill: white !important;
+}
+
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -306,6 +357,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
