--- a/styles.css
+++ b/styles.css
@@ -238,7 +238,8 @@ ul {
   display: flex;            
 }
 .features-list-li {
-  flex: 1;                   
+  flex: 1;   
+  text-align: left;
 }
 .feature-title {
   font-weight: 700;
@@ -305,6 +306,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
