--- a/styles.css
+++ b/styles.css
@@ -140,9 +140,7 @@ ul {
   gap: 40px;
 }
 
-.head-ul:hover{
-  color: var(--secondary-text-color);
-}
+
 
 .nav-link {
   color: var(--primary-text-color);
@@ -150,7 +148,7 @@ ul {
   transition: color 0.3s;
 }
 .nav-link.current,
-.nav-link:hover {
+.nav-link.head-ul:hover {
   color: var(--accent-color);
 }
 
@@ -311,6 +309,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
