--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,15 @@
   padding-bottom: 94px;
 }
 
+.hedul{
+  color: var(--primary-text-color);
+  font-weight: 500;
+  transition: color 0.3s;
+}
+
+.hedul:hover{
+   color: var(--accent-color);
+}
 
 .header-svg-items {
     width: 16px; 
@@ -309,6 +318,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
