--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,11 @@ ul {
   color: var(--accent-color);
 }
 
+.custom{
+  width:106px;
+  height:60px;
+}
+
 .nav-list {
   display: flex;              
   gap: 40px;
@@ -389,6 +394,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
