--- a/styles.css
+++ b/styles.css
@@ -145,8 +145,8 @@ ul {
 }
 
 .custom{
-  width:106px;
-  height:60px;
+  width:106px !important; 
+  height:60px !important; 
 }
 
 .nav-list {
@@ -394,6 +394,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
