--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,7 @@ ul {
 .custom{
   width:106px !important; 
   height:60px !important; 
+  color: grey !important;
 }
 
 .nav-list {
@@ -394,6 +395,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
