--- a/styles.css
+++ b/styles.css
@@ -276,6 +276,7 @@ ul {
 
 .customer {
     fill: rgba(175, 177, 184, 1);
+    left: 64px;
 }
 
 .customer:hover {
@@ -404,6 +405,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
