--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@
 }
 
 .box {
+  display: flex;
+  align-items: center;
   height: 92px;
   width: 170px;            
   padding: 20px;            
@@ -405,6 +407,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
