--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@
 }
 
 .hedul li svg use {
-  fill: rgba(33, 150, 243, 1);
+  fill: black;
   transition: fill 0.3s ease;
 }
 
@@ -421,6 +421,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
