--- a/styles.css
+++ b/styles.css
@@ -277,13 +277,12 @@ ul {
 
 
 .regular-customers-list-items svg use {
-    fill: rgba(175, 177, 184, 1);
-    transition: fill 0.3s ease;
+  fill: rgba(175, 177, 184, 1);
+  transition: 0.25s;
 }
 
-
 .regular-customers-list-items:hover svg use {
-    fill: #2196F3; 
+  fill: #2196F3;  /* синій */
 }
 
 
@@ -428,6 +427,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
