--- a/styles.css
+++ b/styles.css
@@ -275,6 +275,16 @@ ul {
     justify-content: space-between;
 }
 
+
+.regular-customers-list-items svg use {
+    fill: rgba(175, 177, 184, 1);
+    transition: fill 0.3s ease;
+}
+
+.regular-customers-list-items:hover svg use {
+    fill: #2196F3; 
+}
+
 .regular-customers-list-items {
     border: 1px solid rgba(175, 177, 184, 1);
     transition: border-color 0.3s ease;
